--- a/EducationSite/assets/sass/parts/_navigation.scss
+++ b/EducationSite/assets/sass/parts/_navigation.scss
@@ -143,24 +143,26 @@
 
 .scrollup {
     visibility: hidden;
-
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    color: $quaternaryColor;
+    background-color: $secondaryColor;
+    font-size: 20px;
+    text-align: center;
+    right: 40px;
+    bottom: 40px;
+    border-radius: 50%;
+    padding: 10px;
+    align-items: center;
+    z-index: -2;
+    transition: all 0.3s ease;
+    opacity: 0;
 
     &.sticky {
         visibility: visible;
-        position: fixed;
-        color: $quaternaryColor;
-        background-color: $secondaryColor;
-        font-size: 20px;
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        right: 40px;
-        bottom: 40px;
-        border-radius: 50%;
-        padding: 10px;
-        align-items: center;
-        scroll-behavior: smooth;
-        transition: all 0.3s ease;
+        z-index: 366;
+        opacity: 1;
     }
 
 
