--- a/EducationSite/assets/sass/parts/_study.scss
+++ b/EducationSite/assets/sass/parts/_study.scss
@@ -24,7 +24,7 @@
 
 
             img {
-                border-radius: 4px 4px 0 0;
+                border-radius: 0 0 6px 6px;
 
 
             }
